fixed missing symbology

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -1414,7 +1414,12 @@
       No \texttt{options} available.\\
       This command is equivalent to:
       \begin{lstlisting}[gobble=8]
-        \path[draw=foreground!50!background,dashed,shorten <=0.75cm,shorten >=0.75cm] (coord1) -- (coord2);
+        \path[
+          draw=foreground!50!background,
+          dashed,
+          shorten <=0.75cm,
+          shorten >=0.75cm
+        ] (coord1) -- (coord2);
       \end{lstlisting}
     
       \mbox{}\\[0.2cm]
@@ -1481,149 +1486,149 @@
 \appendix
 \section{Symbology}
 
-%   \begin{longtable}{|r|l|c|c|}
-%     \hline 
-%       No. & Name                            & Symbol                                         & See section              \\
-%     \endhead
-%     \hline
-%       \No & main track                      & \tsSymbol{main_track}                          & \ref{sec:track}          \\
-%     \hline
-%       \No & secondary track                 & \tsSymbol{secondary_track}                     & \ref{sec:track}          \\
-%     \hline
-%       \No & track label                     & \tsSymbol{track_label}                         & \ref{sec:track}          \\
-%     \hline
-%       \No & bufferstop                      & \tsSymbol{bufferstop}                          & \ref{sec:track}          \\
-%     \hline
-%       \No & friction bufferstop             & \tsSymbol{friction_bufferstop}                 & \ref{sec:track}          \\
-%     \hline
-%       \No & track closure                   & \tsSymbol{track_closure}                       & \ref{sec:track}          \\
-%     \hline
-%       \No & turnout                         & \tsSymbol{turnout}                             & \ref{sym:turnouts}       \\
-%     \hline
-%       \No & \parbox[c]{5cm}{turnout\\with fouling point indicator}
-%                                             & \tsSymbol{turnout_fouling}                     & \ref{sym:turnouts}       \\
-%     \hline
-%       \No & \parbox[c]{5cm}{turnout\\operated manually}
-%                                             & \tsSymbol{turnout_manually}                    & \ref{sym:turnouts}       \\
-%     \hline
-%       \No & \parbox[c]{5cm}{turnout\\with points in right position}
-%                                             & \tsSymbol{turnout_points_right}                & \ref{sym:turnouts}       \\
-%     \hline
-%       \No & \parbox[c]{5cm}{turnout\\with points in left position}
-%                                             & \tsSymbol{turnout_points_left}                 & \ref{sym:turnouts}       \\
-%     \hline
-%       \No & \parbox[c]{5cm}{turnout\\with moving points}
-%                                             & \tsSymbol{turnout_points_moving}               & \ref{sym:turnouts}       \\
-%     \hline
-%       \No & diamond crossing                & \tsSymbol{diamond_crossing}                    & \ref{sym:diamondcrossing}\\
-%     \hline
-%       \No & double-slip turnout             & \tsSymbol{slip_turnout}                        & \ref{sym:slipturnout}    \\
-%     \hline
-%       \No & derailer                        & \tsSymbol{derailer}                            & \ref{sym:derailer}       \\
-%     \hline
-%       \No & parked vehicles                 & \tsSymbol{parked_vehicles}                     & \ref{sym:parkedvehicles} \\
-%     \hline
-%       \No & train in shunting mode          & \tsSymbol{train_shunt_mode}                    & \ref{sym:trainshunting}  \\
-%     \hline
-%       \No & train shunting                  & \tsSymbol{train_shunting}                      & \ref{sym:trainshunting}  \\
-%     \hline
-%       \No & train                           & \tsSymbol{train}                               & \ref{sym:trains}         \\
-%     \hline
-%       \No & train moving slow               & \tsSymbol{train_moving_slow}                   & \ref{sym:trains}         \\
-%     \hline
-%       \No & train moving                    & \tsSymbol{train_moving}                        & \ref{sym:trains}         \\
-%     \hline
-%       \No & train moving fast               & \tsSymbol{train_moving_fast}                   & \ref{sym:trains}         \\
-%     \hline
-%       \No & train ghost                     & \tsSymbol{train_ghost}                         & \ref{sym:trains}         \\
-%     \hline
-%       \No & train operated automatically    & \tsSymbol{train_drive_automatic}               & \ref{sym:trains}         \\
-%     \hline
-%       \No & train operated by human         & \tsSymbol{train_drive_human}                   & \ref{sym:trains}         \\
-%     \hline
-%       \No & distant signal                  & \tsSymbol[1.4]{distant_signal}                 & \ref{sym:signals}        \\
-%     \hline
-%       \No & \parbox[c]{4cm}{distant signal\\with speed indicator}
-%                                             & \tsSymbol[1.4]{distant_speed_signal}           & \ref{sym:signals}        \\
-%     \hline
-%       \No & speed signal                    & \tsSymbol[1.4]{speed_signal}                   & \ref{sym:signals}        \\
-%     \hline
-%       \No & block signal                    & \tsSymbol[1.4]{block_signal}                   & \ref{sym:signals}        \\
-%     \hline
-%       \No & route signal                    & \tsSymbol[1.4]{route_signal}                   & \ref{sym:signals}        \\
-%     \hline
-%       \No & \parbox[c]{5cm}{combined signal (distant, block and route signal)}
-%                                             & \tsSymbol[1.4]{combined_signal}                & \ref{sym:signals}        \\
-%     \hline
-%       \No & shunt signal                    & \tsSymbol[1.4]{shunt_signal}                   & \ref{sym:signals}        \\
-%     \hline
-%       \No & shunt signal locked             & \tsSymbol[1.4]{locked_shunt_signal}            & \ref{sym:signals}        \\
-%     \hline
-%       \No & shunt limit                     & \tsSymbol[1.4]{shunt_limit}                    & \ref{sym:signals}        \\
-%     \hline
-%       \No & train berth sign                & \tsSymbol[1.4]{train_berth_sign}               & \ref{sym:signals}        \\
-%     \hline
-%       \No & view point                      & \tsSymbol[1.4]{view_point}                     & \ref{sec:locations}      \\
-%     \hline
-%       \No & braking point                   & \tsSymbol[1.4]{braking_point}                  & \ref{sec:locations}      \\
-%     \hline
-%       \No & end of movement authority       & \tsSymbol[1.4]{end_of_authority}               & \ref{sec:locations}      \\
-%     \hline
-%       \No & danger point                    & \tsSymbol[1.4]{danger_point}                   & \ref{sec:locations}      \\
-%     \hline
-%       \No & clearing point                  & \tsSymbol{clearing_point}                      & \ref{sec:clearingpoints} \\
-%     \hline
-%       \No & block clearing point            & \tsSymbol{block_clearing_point}                & \ref{sec:clearingpoints} \\
-%     \hline
-%       \No & route clearing point            & \tsSymbol{route_clearing_point}                & \ref{sec:clearingpoints} \\
-%     \hline
-%       \No & route                           & \tsSymbol{route}                               & \ref{sec:routes}         \\
-%     \hline
-%       \No & direction control               & \tsSymbol{direction_control}                   & \ref{sec:routes}         \\
-%     \hline
-%       \No & balise group                    & \tsSymbol{balise_group}                        & \ref{sec:transmitters}   \\
-%     \hline
-%       \No & balise individual               & \tsSymbol{balise_individual}                   & \ref{sec:transmitters}   \\
-%     \hline
-%       \No & track loop                      & \tsSymbol{trackloop}                           & \ref{sec:transmitters}   \\
-%     \hline
-%       \No & platform                        & \tsSymbol[1.4]{platform}                       & \ref{sec:constructions}  \\
-%     \hline
-%       \No & level crossing                  & \tsSymbol[2.0]{level_crossing}                 & \ref{sec:constructions}  \\
-%     \hline
-%       \No & bridge                          & \tsSymbol[2.0]{bridge}                         & \ref{sec:constructions}  \\
-%     \hline
-%       \No & hump                            & \tsSymbol[1.4]{hump}                           & \ref{sec:constructions}  \\
-%     \hline
-%       \No & interlocking                    & \tsSymbol{interlocking}                        & \ref{sec:constructions}  \\
-%     \hline
-%       \No & pylons                          & \tsSymbol[1.4]{pylon}                          & \ref{sec:constructions}  \\
-%     \hline
-%       \No & distant power off               & \tsSymbol[1.4]{distant_power_off}              & \ref{sec:electrics}      \\
-%     \hline
-%       \No & power off                       & \tsSymbol[1.4]{power_off}                      & \ref{sec:electrics}      \\
-%     \hline
-%       \No & power on                        & \tsSymbol[1.4]{power_on}                       & \ref{sec:electrics}      \\
-%     \hline
-%       \No & distant pantograph down         & \tsSymbol[1.4]{distant_pantograph_down}        & \ref{sec:electrics}      \\
-%     \hline
-%       \No & pantograph down                 & \tsSymbol[1.4]{pantograph_down}                & \ref{sec:electrics}      \\
-%     \hline
-%       \No & pantograph up                   & \tsSymbol[1.4]{pantograph_up}                  & \ref{sec:electrics}      \\
-%     \hline
-%       \No & wire limit                      & \tsSymbol[1.4]{wire_limit}                     & \ref{sec:electrics}      \\
-%     \hline
-%       \No & track distance (in \si{\metre}) & \tsSymbol[2.0]{track_distance}                 & \ref{sec:measures}       \\
-%     \hline
-%       \No & train berth shape               & \tsSymbol{train_berth}                         & \ref{sec:measures}       \\
-%     \hline
-%       \No & Messure line                    & \tsSymbol{measure_line}                        & \ref{sec:measures}       \\
-%     \hline
-%       \No & hectometer                      & \tsSymbol{hectometer}                          & \ref{sec:measures}       \\
-%     \hline
-%       \No & track marking                   & \tsSymbol{track_marking}                       & \ref{sec:measures}       \\
-%     \hline
-%   \end{longtable}
+  \begin{longtable}{|r|l|c|c|}
+    \hline 
+      No. & Name                            & Symbol                                         & See section              \\
+    \endhead
+    \hline
+      \No & main track                      & \tsSymbol{main_track}                          & \ref{sec:track}          \\
+    \hline
+      \No & secondary track                 & \tsSymbol{secondary_track}                     & \ref{sec:track}          \\
+    \hline
+      \No & track label                     & \tsSymbol{track_label}                         & \ref{sec:track}          \\
+    \hline
+      \No & bufferstop                      & \tsSymbol{bufferstop}                          & \ref{sec:track}          \\
+    \hline
+      \No & friction bufferstop             & \tsSymbol{friction_bufferstop}                 & \ref{sec:track}          \\
+    \hline
+      \No & track closure                   & \tsSymbol{track_closure}                       & \ref{sec:track}          \\
+    \hline
+      \No & turnout                         & \tsSymbol{turnout}                             & \ref{sym:turnouts}       \\
+    \hline
+      \No & \parbox[c]{5cm}{turnout\\with fouling point indicator}
+                                            & \tsSymbol{turnout_fouling}                     & \ref{sym:turnouts}       \\
+    \hline
+      \No & \parbox[c]{5cm}{turnout\\operated manually}
+                                            & \tsSymbol{turnout_manually}                    & \ref{sym:turnouts}       \\
+    \hline
+      \No & \parbox[c]{5cm}{turnout\\with points in right position}
+                                            & \tsSymbol{turnout_points_right}                & \ref{sym:turnouts}       \\
+    \hline
+      \No & \parbox[c]{5cm}{turnout\\with points in left position}
+                                            & \tsSymbol{turnout_points_left}                 & \ref{sym:turnouts}       \\
+    \hline
+      \No & \parbox[c]{5cm}{turnout\\with moving points}
+                                            & \tsSymbol{turnout_points_moving}               & \ref{sym:turnouts}       \\
+    \hline
+      \No & diamond crossing                & \tsSymbol{diamond_crossing}                    & \ref{sym:diamondcrossing}\\
+    \hline
+      \No & double-slip turnout             & \tsSymbol{slip_turnout}                        & \ref{sym:slipturnout}    \\
+    \hline
+      \No & derailer                        & \tsSymbol{derailer}                            & \ref{sym:derailer}       \\
+    \hline
+      \No & parked vehicles                 & \tsSymbol{parked_vehicles}                     & \ref{sym:parkedvehicles} \\
+    \hline
+      \No & train in shunting mode          & \tsSymbol{train_shunt_mode}                    & \ref{sym:trainshunting}  \\
+    \hline
+      \No & train shunting                  & \tsSymbol{train_shunting}                      & \ref{sym:trainshunting}  \\
+    \hline
+      \No & train                           & \tsSymbol{train}                               & \ref{sym:trains}         \\
+    \hline
+      \No & train moving slow               & \tsSymbol{train_moving_slow}                   & \ref{sym:trains}         \\
+    \hline
+      \No & train moving                    & \tsSymbol{train_moving}                        & \ref{sym:trains}         \\
+    \hline
+      \No & train moving fast               & \tsSymbol{train_moving_fast}                   & \ref{sym:trains}         \\
+    \hline
+      \No & train ghost                     & \tsSymbol{train_ghost}                         & \ref{sym:trains}         \\
+    \hline
+      \No & train operated automatically    & \tsSymbol{train_drive_automatic}               & \ref{sym:trains}         \\
+    \hline
+      \No & train operated by human         & \tsSymbol{train_drive_human}                   & \ref{sym:trains}         \\
+    \hline
+      \No & distant signal                  & \tsSymbol[1.4]{distant_signal}                 & \ref{sym:signals}        \\
+    \hline
+      \No & \parbox[c]{4cm}{distant signal\\with speed indicator}
+                                            & \tsSymbol[1.4]{distant_speed_signal}           & \ref{sym:signals}        \\
+    \hline
+      \No & speed signal                    & \tsSymbol[1.4]{speed_signal}                   & \ref{sym:signals}        \\
+    \hline
+      \No & block signal                    & \tsSymbol[1.4]{block_signal}                   & \ref{sym:signals}        \\
+    \hline
+      \No & route signal                    & \tsSymbol[1.4]{route_signal}                   & \ref{sym:signals}        \\
+    \hline
+      \No & \parbox[c]{5cm}{combined signal (distant, block and route signal)}
+                                            & \tsSymbol[1.4]{combined_signal}                & \ref{sym:signals}        \\
+    \hline
+      \No & shunt signal                    & \tsSymbol[1.4]{shunt_signal}                   & \ref{sym:signals}        \\
+    \hline
+      \No & shunt signal locked             & \tsSymbol[1.4]{locked_shunt_signal}            & \ref{sym:signals}        \\
+    \hline
+      \No & shunt limit                     & \tsSymbol[1.4]{shunt_limit}                    & \ref{sym:signals}        \\
+    \hline
+      \No & train berth sign                & \tsSymbol[1.4]{train_berth_sign}               & \ref{sym:signals}        \\
+    \hline
+      \No & view point                      & \tsSymbol[1.4]{view_point}                     & \ref{sec:locations}      \\
+    \hline
+      \No & braking point                   & \tsSymbol[1.4]{braking_point}                  & \ref{sec:locations}      \\
+    \hline
+      \No & end of movement authority       & \tsSymbol[1.4]{end_of_authority}               & \ref{sec:locations}      \\
+    \hline
+      \No & danger point                    & \tsSymbol[1.4]{danger_point}                   & \ref{sec:locations}      \\
+    \hline
+      \No & clearing point                  & \tsSymbol{clearing_point}                      & \ref{sec:clearingpoints} \\
+    \hline
+      \No & block clearing point            & \tsSymbol{block_clearing_point}                & \ref{sec:clearingpoints} \\
+    \hline
+      \No & route clearing point            & \tsSymbol{route_clearing_point}                & \ref{sec:clearingpoints} \\
+    \hline
+      \No & route                           & \tsSymbol{route}                               & \ref{sec:routes}         \\
+    \hline
+      \No & direction control               & \tsSymbol{direction_control}                   & \ref{sec:routes}         \\
+    \hline
+      \No & balise group                    & \tsSymbol{balise_group}                        & \ref{sec:transmitters}   \\
+    \hline
+      \No & balise individual               & \tsSymbol{balise_individual}                   & \ref{sec:transmitters}   \\
+    \hline
+      \No & track loop                      & \tsSymbol{trackloop}                           & \ref{sec:transmitters}   \\
+    \hline
+      \No & platform                        & \tsSymbol[1.4]{platform}                       & \ref{sec:constructions}  \\
+    \hline
+      \No & level crossing                  & \tsSymbol[2.0]{level_crossing}                 & \ref{sec:constructions}  \\
+    \hline
+      \No & bridge                          & \tsSymbol[2.0]{bridge}                         & \ref{sec:constructions}  \\
+    \hline
+      \No & hump                            & \tsSymbol[1.4]{hump}                           & \ref{sec:constructions}  \\
+    \hline
+      \No & interlocking                    & \tsSymbol{interlocking}                        & \ref{sec:constructions}  \\
+    \hline
+      \No & pylons                          & \tsSymbol[1.4]{pylon}                          & \ref{sec:constructions}  \\
+    \hline
+      \No & distant power off               & \tsSymbol[1.4]{distant_power_off}              & \ref{sec:electrics}      \\
+    \hline
+      \No & power off                       & \tsSymbol[1.4]{power_off}                      & \ref{sec:electrics}      \\
+    \hline
+      \No & power on                        & \tsSymbol[1.4]{power_on}                       & \ref{sec:electrics}      \\
+    \hline
+      \No & distant pantograph down         & \tsSymbol[1.4]{distant_pantograph_down}        & \ref{sec:electrics}      \\
+    \hline
+      \No & pantograph down                 & \tsSymbol[1.4]{pantograph_down}                & \ref{sec:electrics}      \\
+    \hline
+      \No & pantograph up                   & \tsSymbol[1.4]{pantograph_up}                  & \ref{sec:electrics}      \\
+    \hline
+      \No & wire limit                      & \tsSymbol[1.4]{wire_limit}                     & \ref{sec:electrics}      \\
+    \hline
+      \No & track distance (in \si{\metre}) & \tsSymbol[2.0]{track_distance}                 & \ref{sec:measures}       \\
+    \hline
+      \No & train berth shape               & \tsSymbol{train_berth}                         & \ref{sec:measures}       \\
+    \hline
+      \No & Messure line                    & \tsSymbol{measure_line}                        & \ref{sec:measures}       \\
+    \hline
+      \No & hectometer                      & \tsSymbol{hectometer}                          & \ref{sec:measures}       \\
+    \hline
+      \No & track marking                   & \tsSymbol{track_marking}                       & \ref{sec:measures}       \\
+    \hline
+  \end{longtable}
 
 \clearpage
 \input{versionhistory.tex}
